feat: refactor Java SE8